# lucille

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.lambda  Dockerfile.windows  Makefile  README.md  schema.sql  sqlx-data.json
.github/workflows/: lambda.yml  release.yml  rust.yml
app/: Cargo.toml
app/src/: app.rs  encryption.rs  hashfs.rs  lib.rs  media_backend.rs  media_view.rs  scan.rs  search_manager.rs  storage.rs  transcode.rs
app/src/app/: lucile_config.rs  lucille_config.rs  mod.rs
app/src/encryption/: easyaes.rs
app/src/ffmpeg/: cmd.rs  mod.rs  split.rs
app/src/ffmpeg/gif/: mod.rs
app/src/ingest/: extract.rs  insert.rs  metadata.rs  mod.rs  scan.rs
app/src/prepare/: mod.rs  splitter.rs
app/src/storage/: backend.rs  mod.rs  verify.rs
app/src/transcode/: make_gif.rs  mod.rs
cli/: Cargo.toml
cli/src/: main.rs
cli/src/cli/: argparse.rs  clean.rs  corpus.rs  debug_utils.rs  export.rs  helpers.rs  media_view.rs  mod.rs  prepare.rs  render.rs  scan.rs  workflow.rs
cli/src/cli/search/: mod.rs  select.rs
cli/src/content/: identifiers.rs  mod.rs  split.rs  storage.rs
cli/src/ffmpeg/: gif.rs  mod.rs
cli/src/search/: mod.rs  srt_loader.rs
cli/src/service/: transcode.rs
cli/src/srt/: mod.rs  parser.rs
core/: Cargo.toml
core/src/: lib.rs  scan.rs
database/: Cargo.toml  build.rs
database/migrations/: 20220828143729_create.sql  20220831211113_searchindex.sql  20230224122153_media_segment_unique_seq.sql  20230224134432_enable_cascade_delete.sql
database/src/: chapter.rs  corpus.rs  index.rs  lib.rs  media_segment.rs  media_view.rs  storage.rs  subtitles.rs
database/test_data/: srt2.srt
gui/: Cargo.toml
gui/docs/: index.html
gui/src/: gui_app.rs  lib.rs  main.rs
gui/src/gui_app/: database.rs  egui_logger.rs  error.rs  error_popup.rs  hotkey_manager.rs  image_sorter.rs  loader.rs  mod.rs  oneshot_state.rs  sift_app.rs  sift_manager.rs  siftimage.rs
gui/src/gui_app/components/: card.rs  choice.rs
gui/src/gui_app/lucile/: gif_creation.rs  import_app.rs  import_manager.rs  loader.rs  mod.rs  runtime_loader.rs
gui/src/gui_app/lucile/search_app/: episode_cache.rs  loader.rs  mod.rs
gui/src/gui_app/lucille/: gif_creation.rs  import_app.rs  loader.rs  mod.rs  runtime_loader.rs
gui/src/gui_app/lucille/search_app/: episode_cache.rs  loader.rs  mod.rs
gui/src/gui_app/search_app/: episode_cache.rs  mod.rs
lambdas/: Cargo.toml
lambdas/src/: lib.rs
lucile-core/: Cargo.toml
lucile-core/src/: encryption_config.rs  hash.rs  identifiers.rs  lib.rs  metadata.rs  scan.rs
lucile-core/src/hash/: hash_io.rs  mod.rs
lucille-core/: Cargo.toml
lucille-core/src/: clean_sub.rs  lib.rs
scripts/: coverage.sh  dump_schema.sh  lambda-build.sh  version.sh
search/: Cargo.toml
search/src/: error.rs  lib.rs  srt_loader.rs
src/: cli_select.rs  error.rs  ffmpeg.rs  hash.rs  main.rs  search.rs  srt_loader.rs  storage.rs
src/cli/: argparse.rs  helpers.rs  index.rs  interactive.rs  media_intake.rs  mod.rs  search.rs  transcode.rs
src/content/: encrypted.rs  identifiers.rs  index.rs  metadata.rs  mod.rs  process.rs  scan.rs  split.rs  video_range.rs
src/details/: encrypted.rs  index.rs  process.rs  storage.rs  transform.rs
src/ffmpeg/: mod.rs  split.rs
src/search/: mod.rs
src/service/: mod.rs  search.rs  transcode.rs
src/srt/: mod.rs  parser.rs
src/srt/parser/: mod.rs
