[package]
name = "lucile"
version = "0.1.0"
authors = ["Scott Schroeder <scottschroeder@sent.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
color-backtrace = { version = "0.4" }
pretty_env_logger = "0.4"

log = "0.4"
anyhow = "1"


srt = "0.1"
walkdir = "2.3"

tantivy = "0.13.2"
tempfile = "3.1.0"
nom = "6.0"



#thiserror = "1.0"

#serde = { version = "1.0", features = ["derive"] }
#serde_json = "1"

#lazy_static = "1.4"
#regex = "1.4"

#futures = "0.3"
#tokio = { version = "0.3", features = ["full"] }
#async-trait = "0.1"