[package]
name = "lucile"
version = "0.1.0"
authors = ["Scott Schroeder <scottschroeder@sent.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
color-backtrace = { version = "0.5" }
pretty_env_logger = "0.4"

log = "0.4"
anyhow = "1"


encoding_rs = "0.8.26"
walkdir = "2.3"
tempfile = "3"

tantivy = "0.14.0"
uuid = "0.8.1"
nom = "6.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
csv = "1"


thiserror = "1.0"

once-cell-regex = "0.2.1"
torrent-name-parser = "0.5.0"

#lazy_static = "1.4"
#regex = "1.4"

#futures = "0.3"
#tokio = { version = "0.3", features = ["full"] }
#async-trait = "0.1"