[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lucile-core = {path = "../lucile-core"}
database = {path = "../database"}
search = {path = "../search"}

log = "0.4"
thiserror = "1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

walkdir = "2.3"
rayon = "1"
directories = "4.0.1"
tempfile = "3"

subrip = "0.1.1"
encoding_rs = "0.8.26"
torrent-name-parser = "0.5.0"
sha2 = "0.9"

[dev-dependencies]
tokio = { version = "1.20.0", features = ["macros"]}
