[package]
name = "app"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lucille-core = {path = "../lucille-core"}
database = {path = "../database"}
search = {path = "../search"}

log = "0.4"
anyhow = "1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

walkdir = "2.3"
directories = "4.0.1"
config = "0.13"
camino = "1.1.3"
tempfile = "3"

subrip = "0.1.1"
encoding_rs = "0.8.26"
torrent-name-parser = "0.11.0"
csv = "1"
tokio = { version = "1.20.0", features = ["macros", "process"]}
async-trait = "0.1"
rand = "0.8.5"
aes-gcm = {version= "0.10.1", features = ["stream", "std"]}
base64 = "0.21.0"

aws-config = {version= "0.54", optional = true}
aws-sdk-s3 = {version= "0.24", optional = true}

[features]
ffmpeg-debug = []
aws-sdk = ["aws-config", "aws-sdk-s3"]
