[package]
name = "lucille"
version = "0.3.0"
authors = ["Scott Schroeder <scottschroeder@sent.com>"]
edition = "2018"

default-run = "lucille"

[[bin]]
name = "lucille"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
database = {path = "../database"}
lucille-core = {path = "../lucille-core"}
app = {path = "../app"}

clap = {version = "4.1", features = ["derive", "cargo"]}
color-backtrace = { version = "0.5" }
pretty_env_logger = "0.4"

log = "0.4"
anyhow = "1"
serde_json = "1"
once-cell-regex = "0.2.1"

tokio = { version = "1.20.0", features = ["macros", "io-std"]}


[features]
default = ["aws-sdk"]
ffmpeg-debug = []
aws-sdk = [
  "app/aws-sdk"
]
