[package]
name = "gui"
default-run = "lucile_gui"
version = "0.1.0"
authors = ["Scott Schroeder <scottschroeder@sent.com>"]
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "lucile_gui"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
egui = "0.21"
egui_extras = "0.21"
eframe = { version = "0.21", features = ["persistence"] }
rfd = "0.8.2"

once_cell = "1.15"
regex = "1.7.1"
# egui_logger = "0.3.0"

log = "0.4"
rand = "0.8.5"
anyhow = "1"
serde = { version = "1", features = ["derive"] } # You only need this if you want app persistence
serde_json = "1.0"
dashmap = "5.4.0"
camino = "1.1.3"

tokio = { version = "1.20.0" }

lucile-core = { path = "../lucile-core"} 
app = { path = "../app"} 
database = { path = "../database"} 

image = "0.24.2"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"

