[package]
name = "lambdas"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "render"
path = "src/bin/lambda/render.rs"
test = false
required-features = ["lambda"]

[dependencies]
lucille-core = {path = "../lucille-core"}
database = {path = "../database"}
app = {path = "../app"}

serde_json = "1"
anyhow = "1"
log = "0.4"
tokio = { version = "1", features = ["macros"] }

lambda_http = {version="0.7"}
aws-config = {version= "0.54"}
aws-sdk-s3 = {version= "0.24"}

lambda_runtime = {version ="0.7", optional=true}
tracing = { version = "0.1", features = ["log"], optional =true}
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"], optional = true}

[features]
lambda = ["tracing-subscriber", "tracing", "lambda_runtime"]
