[package]
name = "lucile-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
thiserror = "1"

hex = "0.4.2"
sha2 = "0.9"
uuid = "0.8.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

subrip = { version = "0.1.0", features = ["serde"] }
